# profitist-2.0

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
.github/: .github-ci.yml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: a29f4cd03b70_initial.py  bb693dfd2b2e_initial.py
docs/: agent.md  bot.md  database.md  memory.md  overview.md  scheduler.md  setup.md
src/profitist/: config.py  main.py
src/profitist/agent/: loop.py  prompts.py  router.py  tools.py
src/profitist/bot/: middleware.py  router.py
src/profitist/db/: base.py  models.py
src/profitist/memory/: store.py
src/profitist/scheduler/: engine.py  jobs.py
src/profitist/search/: tavily.py
