[project]
name = "profitist-2-0"
version = "0.1.0"
description = "Personal AI assistant — proactive Telegram bot with long-term memory"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.7",
    "openai>=1.0",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "apscheduler>=3.10",
    "tavily-python>=0.5",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.scripts]
profitist = "profitist.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/profitist"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
